# ChangeLog for kde-base/pykde4
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/pykde4/ChangeLog,v 1.70 2010/06/06 14:41:19 scarabeus Exp $

*pykde4-4.4.4 (06 Jun 2010)

  06 Jun 2010; Tomáš Chvátal <scarabeus@gentoo.org> -pykde4-4.3.3.ebuild,
  -pykde4-4.4.2.ebuild, -pykde4-4.4.3.ebuild, +pykde4-4.4.4.ebuild:
  Drop old. Version bump.

  02 Jun 2010; Maciej Mrozowski <reavertm@gentoo.org> pykde4-4.4.2.ebuild,
  pykde4-4.4.3.ebuild:
  Use python_clean_installation_image

  02 Jun 2010; Maciej Mrozowski <reavertm@gentoo.org> pykde4-4.4.2.ebuild,
  pykde4-4.4.3.ebuild:
  pykde4 does not support multiple python ABIs, update ebuilds accordingly

  04 May 2010; Alexey Shvetsov <alexxy@gentoo.org> -pykde4-4.4.1.ebuild:
  Drop KDE SC 4.4.1

*pykde4-4.4.3 (03 May 2010)

  03 May 2010; Alexey Shvetsov <alexxy@gentoo.org> +pykde4-4.4.3.ebuild:
  Version bump

  31 Mar 2010; Dror Levin <spatz@gentoo.org> -pykde4-4.3.4-r1.ebuild,
  -pykde4-4.4.0.ebuild:
  Remove old KDE versions.

*pykde4-4.4.2 (30 Mar 2010)

  30 Mar 2010; Dror Levin <spatz@gentoo.org> +pykde4-4.4.2.ebuild:
  Version bump

  11 Mar 2010; Brent Baude <ranger@gentoo.org> pykde4-4.3.5-r1.ebuild:
  Marking pykde4-4.3.5-r1 ppc stable for bug 300393

*pykde4-4.4.1 (02 Mar 2010)

  02 Mar 2010; Theo Chatzimichos <tampakrap@gentoo.org>
  +pykde4-4.4.1.ebuild:
  Version bump

  20 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  pykde4-4.3.5-r1.ebuild:
  amd64/x86 stable wrt #300393

  10 Feb 2010; Jeroen Roovers <jer@gentoo.org> pykde4-4.3.3-r1.ebuild:
  Stable for HPPA (bug #303929).

  10 Feb 2010; Joseph Jezak <josejx@gentoo.org> pykde4-4.3.3-r1.ebuild:
  Marked ppc/ppc64 stable for bug #303929.

  09 Feb 2010; Pacho Ramos <pacho@gentoo.org> pykde4-4.3.3-r1.ebuild:
  amd64 stable, bug 303929

  09 Feb 2010; Jonathan Callen <abcd@gentoo.org> metadata.xml:
  Update metadata.xml from overlay

*pykde4-4.4.0 (09 Feb 2010)
