@@ -5,6 +5,6 @@ DIST kdebindings-4.3.5.tar.bz2 4881006 RMD160 96fd389226116717f1ab28e71c788a99a1
 DIST kdebindings-4.4.4.tar.bz2 5091453 RMD160 38725fb1fec359e2b3e3acf23baf07e6d615dfdf SHA1 db5afa2a70558e34838a0f9296f008035e03f064 SHA256 bcfd514e8e4a88f1a36750b8b5fc3cbc52497f5ea22f811ff718301d7687c5f2
 EBUILD pykde4-4.3.3-r1.ebuild 2041 RMD160 7bf21cd12684a55337594393a0bf46f48e67a9e1 SHA1 033bc8e6961506c679d123447f19cae58d5fa5ca SHA256 431d90d8ec32cc349ef36a2852c4d2279281219b1d578cb90f4d324b0f5b5f2a
 EBUILD pykde4-4.3.5-r1.ebuild 2164 RMD160 5c1e7848090c5810f61a4c81cfbf41c8381f37a6 SHA1 d3eca3863f8544b597b4a3e05c20f083f3829adf SHA256 97672b142bd6260cc10e84cc63ebbcc041b925314d4e3a939398d4ca87cb8293
-EBUILD pykde4-4.4.4.ebuild 1898 RMD160 500238c5f0d0cd5d0d2eb060ff5368a7593163f8 SHA1 4bed2b350b3d22509e8beba7dc90a66791b48746 SHA256 6353e44df3371b536b079bd60170569487d0b59a7123437abb0bd8695230b077
-MISC ChangeLog 9007 RMD160 9265ee2e25ee1273dfef0eca4cf4e1840ec479de SHA1 63d34e03c5f29722aad5293ba0a01e6955d9e831 SHA256 a00e7a319438e0f4ec69f45bb9342467a152f6adabc98d5bc64e1fe16cda13b1
+EBUILD pykde4-4.4.4.ebuild 1927 RMD160 86aa64fc1ce9cb700fcc5d5d8cf11238e3457b30 SHA1 c30a57e4917164852fa73b4490e9a6925f85bedc SHA256 35d73c1a39fa4d86af785e6f65096aaea70ddf6229ce88a28582e3ce0baae2a1
+MISC ChangeLog 9136 RMD160 2233ec3f1f4f0c57bcf88a2c53f4746711714778 SHA1 410753ea157b574a3c02bca5e7dc7af9406efb42 SHA256 c67a6732c26d6f64aa703171c3c0101e9a94e46835b0dbe1c0562bb2b3eff605
 MISC metadata.xml 329 RMD160 6424cd6e9a3dffa1ef07462160d03733beff3e02 SHA1 3a06ca30f6526a47772713084e9e36ca8a83e41b SHA256 e449422e44fd1a613b5810fe876de7fbdd4ff9ad97b40057af758061bb2607f8
