@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/pykde4
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/pykde4/ChangeLog,v 1.70 2010/06/06 14:41:19 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/pykde4/ChangeLog,v 1.71 2010/06/06 14:52:47 scarabeus Exp $
+
+  06 Jun 2010; Tomáš Chvátal <scarabeus@gentoo.org> pykde4-4.4.4.ebuild:
+  Update pykde4 depgraph to not fail with +akonadi.
 
 *pykde4-4.4.4 (06 Jun 2010)
 
